// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pile 2 players 1`] = `
.c0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 10px;
}

.c2 {
  max-width: 80px;
}

.c1 {
  display: block;
  width: 100%;
  text-align: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div>
        <img
          aria-label="QH"
          class="c2"
          src="image"
        />
      </div>
      <div
        class="c3"
      >
        <div />
        <div />
      </div>
      <div>
        <img
          aria-label="JH"
          class="c2"
          src="image"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Pile 3 players 1`] = `
.c0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 10px;
}

.c2 {
  max-width: 80px;
}

.c1 {
  display: block;
  width: 100%;
  text-align: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div>
        <img
          aria-label="QH"
          class="c2"
          src="image"
        />
      </div>
      <div
        class="c3"
      >
        <div>
          <img
            aria-label="KH"
            class="c2"
            src="image"
          />
        </div>
        <div />
      </div>
      <div>
        <img
          aria-label="JH"
          class="c2"
          src="image"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Pile 4 players 1`] = `
.c0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 10px;
}

.c2 {
  max-width: 80px;
}

.c1 {
  display: block;
  width: 100%;
  text-align: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div>
        <img
          aria-label="QH"
          class="c2"
          src="image"
        />
      </div>
      <div
        class="c3"
      >
        <div>
          <img
            aria-label="KH"
            class="c2"
            src="image"
          />
        </div>
        <div>
          <img
            aria-label="AH"
            class="c2"
            src="image"
          />
        </div>
      </div>
      <div>
        <img
          aria-label="JH"
          class="c2"
          src="image"
        />
      </div>
    </div>
  </div>
</div>
`;
